// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`answer Test results give you the correct score 1`] = `
<div>
  <div>
    Correct
  </div>
  <div>
    0.000
  </div>
  <div>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
    <button>
      Reset
    </button>
    <button>
      Reset Stats
    </button>
  </div>
  <div>
    1
    /
    2
  </div>
  <div>
    <input
      autocomplete="off"
      checked=""
      id="results_visibility"
      name="results_visibility"
      type="checkbox"
    />
    <label
      class="clickable"
      for="results_visibility"
    >
      Show Results?
    </label>
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Position
        </th>
        <th>
          Time
        </th>
        <th>
          Misses
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          3.136
        </td>
        <td>
          1
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          Average
        </td>
        <td>
          3.136
        </td>
        <td>
          1.000
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`answer Test results give you the correct score 2`] = `
<div>
  <div>
    Reset
  </div>
  <div>
    0.000
  </div>
  <div>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
    <button>
      Reset
    </button>
    <button>
      Reset Stats
    </button>
  </div>
  <div>
    0
    /
    0
  </div>
  <div>
    <input
      autocomplete="off"
      checked=""
      id="results_visibility"
      name="results_visibility"
      type="checkbox"
    />
    <label
      class="clickable"
      for="results_visibility"
    >
      Show Results?
    </label>
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Position
        </th>
        <th>
          Time
        </th>
        <th>
          Misses
        </th>
      </tr>
    </thead>
    <tbody />
    <tfoot>
      <tr>
        <td>
          Average
        </td>
        <td />
        <td />
      </tr>
    </tfoot>
  </table>
</div>
`;
